2013-10-04  Araki Ken  <arakiken@users.sf.net>

	* fb/x.h, fb/x_display.h:
	  CLKED, NLKED, SLKED, ALKED macros are moved from x.h to x_display.h.

	* x_screen_manager.c, fb/x_imagelib.c, fb/x_font.c, kik_path.c:
	  #ifdef  __ANDROID__ is added.

	* android/: Support Android native-activity.

	* x_screen.c, vte.c: malloc() is used instead of alloca() in copying text
	  to avoid the failure of alloca().

	* ml_edit.c: Minor fixes of ml_edit_restore_cursor().

2013-09-24  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c: Wraparound is stopped on DECRC.

	* android/: Minor fixes.

2013-09-21  Araki Ken  <arakiken@users.sf.net>

	* x_font.c: "Courier New" font is used by default.

	* x_dnd.c: #include <kiklib/kik_path.h> for cygwin_conv_to_posix_path.

	* kik_path.h: cygwin_conv_to_posix_path is replaced by cygwin_conv_path
	  on cygwin.

	* android/: Minor fixes.

2013-09-18  Araki Ken  <arakiken@users.sf.net>

	* kik_dlfcn_win32.c, tool/mlimgloader/none.c, gdk-pixbuf.c, gdiplus.cpp:
	  #include <kiklib/kik_path.h> for cygwin_conv_to_win32_path.

	* kik_path.h: cygwin_conv_to_win32_path is replaced by cygwin_conv_path
	  on cygwin.

	* configure.in: Fixed typo.

	* android/: Minor fixes.

2013-09-17  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The result of ioctl(WSDISPLAYIO_SETGFXMODE) is ignored.

	* tool/mlimgloader/Makefile.in: Fix for Cygwin/X.

2013-09-10  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.c: ml_pty_get_slave_name() returns /dev/vptyN instead of /dev/ptyN
	  if connected to the remote host.

2013-09-08  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: The bug of storing not only sixel graphics
	  data but also following sequence to ~/.mlterm/*.six is fixed.

	* ml_bidi.c: PICTURE_CHARSET is considered.

2013-09-08  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch]: 'yield' member which is used to exit the parser
	  of vt100 sequence as soon as possible after OSC 5379 show_picture is
	  added to ml_vt100_parser_t.
